Добавила секцію Клієнти, іконки до хедера і секції Переваги. Добавила тіні в Портфоліо

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
   --bottom-index-active: #188ce8;
   --border-color: #ececec;
   --portfolio-border-color: #eeeeee;
+  --client-color: #afb1b8;
 }
 
 body {
@@ -135,6 +136,10 @@ header {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
+.auth-nav-li {
+  margin-bottom: auto;
+  margin-top: auto;
+}
 .auth-nav-li:not(:last-child) {
   margin-right: 50px;
 }
@@ -143,8 +148,23 @@ header {
   color: var(--secondary-text-color);
   font-style: normal;
 }
-.auth-nav-icon {
-  fill: red;
+
+.auth-nav-icon-mail,
+.auth-nav-icon-phone {
+  vertical-align: middle;
+  margin-right: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
+  fill: var(--secondary-text-color);
+}
+
+.auth-nav-icon-mail:hover,
+.auth-nav-icon-phone:hover,
+.auth-nav-icon-mail:focus,
+.auth-nav-icon-phone:focus,
+.icon-li:hover,
+.icon-li:focus {
+  fill: var(--accent-color);
 }
 
 /*Main section*/
@@ -219,8 +239,18 @@ header {
   width: 270px;
 }
 
-.features-li:not(:last-child) {
+.features-li:not(:last-child),
+.work-list-li:not(:last-child),
+.client-li:not(:last-child) {
   margin-right: 30px;
+}
+
+.features-list-icon {
+  padding: 25px 100px;
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+  background-color: var(--main-buttom);
 }
 
 .features-title {
@@ -244,7 +274,8 @@ header {
 
 /*Work*/
 .work-title,
-.team-title {
+.team-title,
+.client-title {
   margin-top: 0;
   margin-bottom: 50px;
 
@@ -256,10 +287,6 @@ header {
 .work-list {
   display: flex;
   margin-top: 0;
-}
-
-.work-list-li:not(:last-child) {
-  margin-right: 30px;
 }
 
 /*Team*/
@@ -306,12 +333,48 @@ header {
   padding-bottom: 30px;
 }
 
+.social-link {
+  width: 44px;
+  height: 44px;
+  background-color: red;
+}
+
+/*Clients*/
+.clients {
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+.clients-li {
+  width: 170px;
+  height: 92px;
+  border: 1px solid var(--client-color);
+  border-radius: 4px;
+  vertical-align: middle;
+}
+
+.icon-li {
+  width: 106px;
+  height: 60px;
+  margin: 16px 32px;
+
+  fill: var(--client-color);
+}
+
+.clients-li:hover,
+.clients-li:focus {
+  border: 1px solid var(--accent-color);
+}
+
 /*Footer*/
 .footer {
   background-color: var(--main-section-color);
   padding-top: 60px;
   padding-bottom: 60px;
 }
+
 address {
   margin-top: 20px;
   margin-bottom: 0;
@@ -424,6 +487,13 @@ address {
   box-sizing: border-box;
   background-color: var(--white-color);
 }
+
+.portfolio-list-li:hover,
+.portfolio-list-li:active {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio-list-li:nth-child(3n) {
   margin-right: 0;
 }
